2003-06-30  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* python/lilylib.py (make_ps_images): bugfixes.

	* input/regression/volta-multi-staff.ly: new file.

	* Documentation/user/macros.itexi: refcommands, refcommand macros.

	* Documentation/user/tutorial.itely (Piano staffs): new section.
	(Setting variables): new section
	(Fine tuning layout): new section

	* input/just-friends.ly (Subject): remove file. Superseeded by
	input/test/chords-without-melody.ly

	* ly/property-init.ly: add all commands to refman.

	* scm/define-translator-properties.scm: remove
	graceAccidentalSpace, graceAlignPosition, keyOctaviation 

	* mf/parmesan-custodes.mf (dir_down): remove underscore from glyph
	name. Underscores botch up PS output.

	* scm/define-translator-properties.scm: remove
	textNonEmpty
	(beatLength): change from oneBeat.
	(repeatCommands): remove regularSpacingDelta

	* scripts/convert-ly.py (FatalConversionError.conv): conversion
	rule for automaticBars.

	* lily/timing-engraver.cc (start_translation_timestep): change
	barNonAuto to automaticBars

2003-06-30  Graham Percival  <gperlist@shaw.ca>

	* input/test/perform-tie.ly: delete file.

2003-06-29  Juergen Reuter  <reuter@ipd.uka.de>

	* Documentation/user/refman.itely (Gregorian square neumes
	ligatures): bugfix: do not show ledger lines in neumes table
	(fixed by setting staff symbol to transparent rather than removing
	it from staff context)

2003-06-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/new-markup.scm (brew-new-markup-molecule): move old markup
	glue into brew-new-markup-molecule.

	* input/mutopia/J.S.Bach/Petites-Preludes/*.ly: syntax updates.

	* Documentation/user/introduction.itely (Computerized typography):
	new section

	* Documentation/user/tutorial.itely (An orchestral part): remove
	pc example from tutorial.

	* input/tutorial/lilbook.tex: use screech-boink

	* scripts/lilypond-book.py (compile_all_files): split formatting
	output body and scheduling lilypond compilation.