@@ -10,8 +10,6 @@ one = \notes\relative c'' {
 	f4 \!e-.-\f r2|
 	R1|
 	f2-\p-(es -)|
-	\property Voice.crescendoText = #'(lines " " "cresc." " ")
-	\property Voice.crescendoSpanner = #'dashed-line
 	d1\<|
 	d1|
 	d2 d2|
